--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,3 +23,11 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v2.1.0
+      with:
+       # Artifact name
+       name: dotnet-helloworld
+       
+    
