--- a/.github/workflows/HelloWorld.yml
+++ b/.github/workflows/HelloWorld.yml
@@ -2,7 +2,7 @@ name: hello-world
 on: push
 jobs:
   my-job:
-    runs-on: ubuntu-latest
+    runs-on: my-label
     steps:
       - name: my-step
         run: echo "Hello World!"
